--- a/components/atom/button/package.json
+++ b/components/atom/button/package.json
@@ -9,7 +9,8 @@
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
   "dependencies": {
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "latest",
+    "@s-ui/react-theme": "beta"
   },
   "keywords": [],
   "license": "MIT"
