--- a/components/ecosystem/theme/package.json
+++ b/components/ecosystem/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@s-ui/react-theme",
+  "name": "@s-ui/react-ecosystem-theme",
   "version": "1.0.0-beta.0",
   "description": "Theme",
   "main": "lib/index.js",
@@ -16,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
+    "lodash.merge": "4.6.2",
     "@s-ui/react-head": "alpha"
   }
 }
