--- a/components/molecule/phoneValidation/package.json
+++ b/components/molecule/phoneValidation/package.json
@@ -13,7 +13,8 @@
     "@s-ui/react-molecule-dropdown-option": "2",
     "@s-ui/react-molecule-dropdown-list": "2",
     "@s-ui/react-atom-icon": "1",
-    "@s-ui/react-atom-button": "1"
+    "@s-ui/react-atom-button": "1",
+    "@s-ui/component-dependencies": "latest"
   },
   "peerDependencies": {
     "@s-ui/theme": "8"
