--- a/components/molecule/phoneInput/package.json
+++ b/components/molecule/phoneInput/package.json
@@ -14,7 +14,8 @@
     "@s-ui/react-molecule-dropdown-list": "2",
     "@s-ui/react-atom-icon": "1",
     "@s-ui/react-atom-button": "1",
-    "@s-ui/component-dependencies": "latest"
+    "@s-ui/component-dependencies": "latest",
+    "rendered-country-flags": "1"
   },
   "peerDependencies": {
     "@s-ui/theme": "8"
