--- a/components/molecule/selectPopover/package.json
+++ b/components/molecule/selectPopover/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@s-ui/react-atom-button": "1",
-    "@s-ui/react-hook-use-portal": "1"
+    "@s-ui/react-hook-use-portal": "1",
+    "@s-ui/react-primitive-injector": "1"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
