--- a/components/molecule/phoneInput/package.json
+++ b/components/molecule/phoneInput/package.json
@@ -13,8 +13,7 @@
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-molecule-dropdown-list": "2",
     "@s-ui/react-molecule-dropdown-option": "2",
-    "@s-ui/react-molecule-input-field": "4",
-    "rendered-country-flags": "1.2.1"
+    "@s-ui/react-molecule-input-field": "4"
   },
   "peerDependencies": {
     "@s-ui/theme": "8"
