--- a/utils/sui-tokens/package.json
+++ b/utils/sui-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/tokens",
-  "version": "0.0.0-beta.2",
+  "version": "0.0.0-beta.3",
   "description": "Tool for manipulate @s-ui tokens.",
   "publishConfig": {
     "access": "public"
@@ -10,8 +10,8 @@
   },
   "bin": {
     ".": "./bin/tokens.mjs",
-    "tokens": "bin/sui-tokens.mjs",
-    "tokens-scss": "bin/sui-tokens-scss.mjs"
+    "tokens": "./bin/tokens.mjs",
+    "tokens-scss": "./bin/tokens-scss.mjs"
   },
   "type": "module",
   "keywords": [
@@ -19,7 +19,6 @@
     "sui"
   ],
   "devDependencies": {
-    "@s-ui/tokens": "*",
     "chalk": "4.1.2",
     "change-case": "5.4.4",
     "chroma-js": "2.6.0",
