--- a/utils/sui-tokens/package.json
+++ b/utils/sui-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/tokens",
-  "version": "0.0.0-beta.16",
+  "version": "0.0.0-beta.17",
   "description": "Tool for manipulate @s-ui tokens.",
   "publishConfig": {
     "access": "public"
@@ -22,16 +22,14 @@
     "sui"
   ],
   "dependencies": {
+    "chalk": "4.1.2",
+    "chroma-js": "2.6.0",
+    "change-case": "5.4.4",
+    "commander": "8.3.0",
+    "deepmerge-ts": "^4.0.0",
     "tsx": "4.19.2",
     "typescript": "4.9.5",
     "zod": "3.23.8"
-  },
-  "devDependencies": {
-    "chalk": "4.1.2",
-    "change-case": "5.4.4",
-    "chroma-js": "2.6.0",
-    "commander": "8.3.0",
-    "deepmerge-ts": "^4.0.0"
   },
   "repository": {
     "type": "git",
