--- a/utils/sui-tokens/package.json
+++ b/utils/sui-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/tokens",
-  "version": "0.0.0-beta.17",
+  "version": "0.0.0-beta.18",
   "description": "Tool for manipulate @s-ui tokens.",
   "publishConfig": {
     "access": "public"
@@ -16,6 +16,7 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "types": "./src/index.ts",
   "type": "module",
   "keywords": [
     "tokens",
