--- a/utils/sui-tokens/package.json
+++ b/utils/sui-tokens/package.json
@@ -23,6 +23,7 @@
     "sui"
   ],
   "dependencies": {
+    "@types/chroma-js": "2.4.5",
     "chalk": "4.1.2",
     "chroma-js": "2.6.0",
     "change-case": "5.4.4",
