--- a/utils/sui-tokens/package.json
+++ b/utils/sui-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-ui/tokens",
-  "version": "0.0.0-beta.20",
+  "version": "0.0.1",
   "description": "Tool for manipulate @s-ui tokens.",
   "publishConfig": {
     "access": "public"
