--- a/utils/sui-tokens/package.json
+++ b/utils/sui-tokens/package.json
@@ -23,6 +23,7 @@
     "sui"
   ],
   "dependencies": {
+    "@s-ui/bundler": "9",
     "@types/chroma-js": "2.4.5",
     "chalk": "4.1.2",
     "chroma-js": "2.6.0",
@@ -30,7 +31,6 @@
     "commander": "8.3.0",
     "deepmerge-ts": "^4.0.0",
     "tsx": "4.19.2",
-    "typescript": "4.9.5",
     "zod": "3.23.8"
   },
   "repository": {
