--- a/components/atom/label/demo/package.json
+++ b/components/atom/label/demo/package.json
@@ -14,6 +14,7 @@
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-atom-checkbox": "3",
     "@s-ui/react-atom-icon": "1",
-    "@s-ui/react-atom-input": "5"
+    "@s-ui/react-atom-input": "5",
+    "use-prefers-color-scheme": "1.1.3"
   }
 }
