--- a/components/atom/actionButton/demo/package.json
+++ b/components/atom/actionButton/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-action-button-demo",
+  "name": "@s-ui/react-atom-action-button-demo",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
