--- a/components/atom/button/demo/package.json
+++ b/components/atom/button/demo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-icon": "1"
+    "@s-ui/react-atom-icon": "1",
+    "use-prefers-color-scheme": "1.1.3"
   }
 }
