--- a/components/atom/input/demo/package.json
+++ b/components/atom/input/demo/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-atom-label": "1",
-    "@s-ui/react-primitive-visually-hidden": "1"
+    "@s-ui/react-primitive-visually-hidden": "1",
+    "@s-ui/react-atom-kbd": "1"
   },
   "keywords": [],
   "author": "",
