--- a/components/atom/tag/demo/package.json
+++ b/components/atom/tag/demo/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@s-ui/react-atom-icon": "1",
     "@s-ui/react-molecule-input-tags": "3",
-    "@s-ui/react-primitive-visually-hidden": "1"
+    "@s-ui/react-primitive-visually-hidden": "1",
+    "@s-ui/react-atom-kbd": "1"
   }
 }
