--- a/components/atom/tag/package.json
+++ b/components/atom/tag/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@s-ui/component-dependencies": "1",
     "@s-ui/react-primitive-injector": "1",
-    "@s-ui/react-hooks": "1"
+    "@s-ui/react-hooks": "1",
+    "emulate-tab": "1.2.1"
   },
   "repository": {
     "type": "git",
