--- a/components/molecule/coachmark/demo/package.json
+++ b/components/molecule/coachmark/demo/package.json
@@ -2,5 +2,8 @@
   "name": "@s-ui/react-molecule-coachmark-demo",
   "version": "1.0.0",
   "private": true,
-  "description": "Demo for @s-ui/react-molecule-coachmark"
+  "description": "Demo for @s-ui/react-molecule-coachmark",
+  "dependencies": {
+    "@s-ui/react-atom-badge": "2"
+  }
 }
