--- a/components/molecule/badgeCounter/demo/package.json
+++ b/components/molecule/badgeCounter/demo/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-button": "1",
-    "@s-ui/react-atom-icon": "1"
+    "@s-ui/react-atom-icon": "1",
+    "@s-ui/react-primitive-visually-hidden": "1"
   }
 }
