--- a/components/primitive/linkBox/demo/package.json
+++ b/components/primitive/linkBox/demo/package.json
@@ -2,7 +2,7 @@
   "name": "@s-ui/react-primitive-link-box-demo",
   "version": "0.0.0",
   "private": true,
-  "description": "Demo for sui-primitive-link-box",
+  "description": "Demo for @s-ui/react-primitive-link-box",
   "dependencies": {
     "@s-ui/react-atom-tag": "4"
   }
