--- a/components/primitive/linkBox/package.json
+++ b/components/primitive/linkBox/package.json
@@ -2,9 +2,19 @@
   "name": "@s-ui/react-primitive-link-box",
   "version": "1.0.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "primitive",
+    "linkbox"
+  ],
   "main": "lib/index.js",
   "scripts": {
-    "prepublishOnly": "rimraf lib && npm run build:js && npm run build:styles",
+    "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
     "build:js": "babel --presets sui ./src --out-dir ./lib",
     "build:styles": "cpx './src/**/*.scss' ./lib"
   },
@@ -17,9 +27,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/SUI-Components/sui-components"
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/primitive/linkBox"
   },
-  "keywords": [],
-  "author": "",
+  "config": {
+    "title": "linkbox",
+    "category": "primitive",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+linkBox%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
