--- a/components/atom/checkbox/demo/package.json
+++ b/components/atom/checkbox/demo/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-icon": "1",
+    "@s-ui/react-primitive-visually-hidden": "1",
+    "@s-ui/react-atom-kbd": "1",
     "react-json-view": "1.21.3",
     "react-use": "17.4.0"
   }
