--- a/components/molecule/checkboxField/package.json
+++ b/components/molecule/checkboxField/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@s-ui/react-atom-checkbox": "3",
-    "@s-ui/react-molecule-field": "1"
+    "@s-ui/react-molecule-field": "1",
+    "classnames": "2.5.1"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
