--- a/components/molecule/modal/package.json
+++ b/components/molecule/modal/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@s-ui/component-dependencies": "1",
-    "@s-ui/react-hooks": "1"
+    "@s-ui/react-hooks": "1",
+    "@radix-ui/react-dialog": "1.1.6",
+    "classnames": "2.5.1"
   },
   "repository": {
     "type": "git",
