--- a/components/molecule/notification/package.json
+++ b/components/molecule/notification/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@s-ui/react-atom-button": "1",
+    "@s-ui/react-atom-icon": "1",
     "@s-ui/react-icons": "1"
   },
   "peerDependencies": {
